# dmq

./: CMakeLists.txt  README.md  dmq.sh  output.txt
doc/: usage.txt
include/: distributor.hpp  id.hpp  server.hpp  user.hpp
src/: distributor.cpp  id.cpp  main.cpp  server.cpp  user.cpp
